syntax = "proto3";

package assignment;

service AssignmentService {
  rpc getAllUserFromProject(getAllTaskOrUserFromProjectRequest) returns (getAllTaskOrUserFromProjectResponse);
  rpc getUserAssignedToTask (getUserAssignedToTaskRequest) returns (getUserAssignedToTaskResponse);
}

message getAllTaskOrUserFromProjectRequest {
  string project_id = 1;
}

message getAllTaskOrUserFromProjectResponse {
  repeated string ids = 1;
}
message getUserAssignedToTaskRequest {
  string task_id = 1;
}
message getUserAssignedToTaskResponse{
  string user_id = 1;
}

